--- a/index.html
+++ b/index.html
@@ -338,9 +338,7 @@ we were well fed and drunk all the time!</p>
                 	<span><strong>Monday - Saturday:</strong> 9am - 6pm.</span>
                 </div>
                 <ul class="social-link">
-                	<li class="twitter"><a href="#"><i class="fa-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="fa-facebook"></i></a></li>
-                    <li class="gplus"><a href="#"><i class="fa-google-plus"></i></a></li>
+                	<li class="twitter"><a href="https://www.facebook.com/drkreddy1989/"><i class="fa-twitter"></i></a></li>
                 </ul>
             </div>
         	<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
@@ -357,7 +355,7 @@ we were well fed and drunk all the time!</p>
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
-        <span class="copyright">Website Designed By | <a href="http://bootstraptaste.com/">Raghavendra Reddy</a></span>
+        <span class="copyright">Website Designed By | <a href="https://www.facebook.com/drkreddy1989/">Raghavendra Reddy</a></span>
     </div>
     <!-- 
         All links in the footer should remain intact. 
