--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ we were well fed and drunk all the time!</p>
                 	<span><strong>Monday - Saturday:</strong> 9am - 6pm.</span>
                 </div>
                 <ul class="social-link">
-                	<li class="twitter"><a href="https://www.facebook.com/drkreddy1989/"><i class="fa-twitter"></i></a></li>
+                	<li class="twitter"><a href="https://www.facebook.com/drkreddy1989/"><i class="fa-facebook"></i></a></li>
                 </ul>
             </div>
         	<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
