--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ we were well fed and drunk all the time!</p>
                 </div>
                 <div class="contact-info-box email clearfix">
                 	<h3><i class="fa-envelope"></i>email:</h3>
-                	<span>drkdesigns@gmail.com</span>
+                	<span>drkdesignz@gmail.com</span>
                 </div>
             	<div class="contact-info-box hours clearfix">
                 	<h3><i class="fa fa-clock-o"></i>Hours:</h3>
